name:                nanovg-blendish
version:             0.1.0.0
synopsis:            Haskell oui-blendish reimplementation using nanovg bindings
-- description:         Something a bit longer
homepage:            https://github.com/sorki/nanovg-blendish
license:             BSD3
license-file:        LICENSE
author:              Richard Marko
maintainer:          srk@48.io
copyright:           2021 Richard Marko
category:            Web
build-type:          Simple
cabal-version:       >=1.10

extra-source-files:
    CHANGELOG.md
    LICENSE
    LICENSE-blender_icons.svg.txt
    LICENSE-DejaVuSans.ttf.txt
    README.md
data-files:
    blender_icons16.png
    DejaVuSans.ttf

library
  hs-source-dirs:      src
  exposed-modules:     Graphics.NanoVG.Blendish
                     , Graphics.NanoVG.Blendish.Context
                     , Graphics.NanoVG.Blendish.Icon
                     , Graphics.NanoVG.Blendish.IconModuleGenerator
                     , Graphics.NanoVG.Blendish.Monad
                     , Graphics.NanoVG.Blendish.Monad.Combinators
                     , Graphics.NanoVG.Blendish.Monad.Primitives
                     , Graphics.NanoVG.Blendish.Monad.Wrappers
                     , Graphics.NanoVG.Blendish.Shorthand
                     , Graphics.NanoVG.Blendish.Theme
                     , Graphics.NanoVG.Blendish.Types
                     , Graphics.NanoVG.Blendish.Utils
                     , Paths_nanovg_blendish
  build-depends:       base >= 4.7 && < 5
                     , text
                     , GLFW-b
                     , stm
                     , transformers
                     , gl
                     , nanovg
                     , containers
                     , linear
  default-language:    Haskell2010
  ghc-options:         -Wall -Wunused-packages
  c-sources:           cbits/glew.c

executable nanovg-blendish-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , bytestring
                     , nanovg-blendish
  default-language:    Haskell2010

-- test-suite nanovg-blendish-tests
--   type:                exitcode-stdio-1.0
--   hs-source-dirs:      test
--   main-is:             Spec.hs
--   other-modules:       --ParseSpec
--                        SpecHelper
--   build-depends:       base >= 4.7 && < 5
--                      , nanovg-blendish
--                      , hspec
--                      , base16-bytestring
--   default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/sorki/nanovg-blendish
